# standard-ellipse-detection

./: display_results.py
python_bindings/: CMakeLists.txt  bindings.cpp
src/: cvcannyapi.cpp
test/: testdetect.cpp
